--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
   <h1>Git Workflow</h1>
-  <div>modified by <!-- PUT YOUR NAME HERE --></div>
+  <div>modified by PRE_32_SOONGYU KWON</div>
 </body>
 </html>
